--- a/gamestore/store/templates/store/base.html
+++ b/gamestore/store/templates/store/base.html
@@ -16,7 +16,7 @@
   <body>
 
 <div class="container">
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  border-bottom">
       <div class="col-md-3 mb-2 mb-md-0">
         <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
           <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
@@ -24,21 +24,19 @@
       </div>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="#" class="nav-link px-2">Features</a></li>
-        <li><a href="#" class="nav-link px-2">Pricing</a></li>
-        <li><a href="#" class="nav-link px-2">FAQs</a></li>
-        <li><a href="#" class="nav-link px-2">About</a></li>
+        <li><a href="{% url 'home' %}" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href="{% url 'sale' %}" class="nav-link px-2">Sale</a></li>
+
       </ul>
 
       <div class="col-md-3 text-end">
         {% if user.is_authenticated %}
    {{ user.username }}
         {{user.money}}
-         <a type="button" class="btn btn-outline-primary me-2" href="{% url 'login' %}">выйти</a>
+         <a type="button" class="btn btn-outline-primary me-2" href="{% url 'logout' %}">выйти</a>
 {% else %}
-  <p>You are not logged in</p>
-  <a type="button" class="btn btn-outline-primary me-2" href="{% url 'login' %}">войти</a> |
+
+  <a type="button" class="btn btn-outline-primary me-2" href="{% url 'login' %}">войти</a>
   <a type="button" class="btn btn-primary" href="{% url 'signup' %}">зарегистрироваться</a>
 {% endif %}
 
@@ -61,8 +59,8 @@
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1">2023 &copy; Таверна</p>
+    
   </div>
 </footer>
 
