--- a/gamestore/store/templates/store/sale.html
+++ b/gamestore/store/templates/store/sale.html
@@ -82,7 +82,7 @@
         <p class="lead">{{ game.description }}</p>
         <h1><s>${{ game.price }}</s></h1>
         <span class="badge text-bg-danger">-{{ game.discount }}%</span>
-        <h1>${{ game.price }}</h1>
+        <h1>${{ game.prise_with_discount }}</h1>
       </div>
       <div class="col-md-5 order-md-1">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="350" height="350" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
